--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <title>Anderson</title>
 
 </head>
-<body>
+<body style="overflow-x: hidden;">
     <header>
         <nav class="nav">
             <ul class="nav-ul">
                 <li class="nav-li">
-                    <a href="#" class="nav-link">
+                    <a href="#parallax" class="nav-link">
                         <span class="nav-text">Home</span>
                         <i class="nav-icon fa-sharp fa-solid fa-house"></i>
                     </a>
@@ -53,6 +53,12 @@
             </ul>
         </nav>
     </header>
+    <div id="parallax">
+        <div class="parallax-item-1"></div>
+        <div class="parallax-item-2"></div>
+        <div class="parallax-item-3"></div>
+        <div class="parallax-item-4"></div>
+    </div>
     <main>
     </main>
     <footer>
