--- a/index.html
+++ b/index.html
@@ -53,15 +53,35 @@
             </ul>
         </nav>
     </header>
-    <div id="parallax">
-        <div class="parallax-item-1"></div>
-        <div class="parallax-item-2"></div>
-        <div class="parallax-item-3"></div>
-        <div class="parallax-item-4"></div>
+    <div class="parallax-container">
+        <div id="parallax">
+            <div class="items parallax-item-1"></div>
+            <div class="items parallax-item-2"></div>
+            <div class="items parallax-item-3"></div>
+            <div class="items parallax-item-4"></div>
+            <div class="items parallax-item-5"></div>
+            <div class="items parallax-item-6"></div>
+            <div class="items parallax-item-7"></div>
+        </div>
+        <div class="container-PP">
+            <label>
+                <svg id="parallax-pause" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                    <path d="M48 64C21.5 64 0 85.5 0 112V400c0 26.5 21.5 48 48 48H80c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H48zm192 0c-26.5 0-48 21.5-48 48V400c0 26.5 21.5 48 48 48h32c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H240z"/>
+                </svg>
+                <svg id="parallax-play" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                    <path d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"/>
+                </svg>
+            </label>
+            <input type="checkbox" class="play-pause">
+        </div>
     </div>
+    
     <main>
     </main>
     <footer>
+        Ola
     </footer>
+    <script src="./assets/js/config.js"></script>
+    <script src="./assets/js/module/parallax.js"></script>
 </body>
 </html>
