--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 </head>
 <body style="overflow-x: hidden;">
+    <!-- START MENU -->
     <header>
         <nav class="nav">
             <ul class="nav-ul">
@@ -33,7 +34,7 @@
                     </a>
                 </li>
                 <li class="nav-li">
-                    <a href="#" class="nav-link">
+                    <a href="#effects" class="nav-link">
                         <span class="nav-text">Portfolio</span>
                         <i class="nav-icon fa-sharp fa-solid fa-terminal"></i>
                     </a>
@@ -53,6 +54,9 @@
             </ul>
         </nav>
     </header>
+    <!-- END DO MENU -->
+
+    <!-- START PARALLAX -->
     <div class="parallax-container">
         <div id="parallax">
             <div class="items parallax-item-1"></div>
@@ -63,6 +67,7 @@
             <div class="items parallax-item-6"></div>
             <div class="items parallax-item-7"></div>
         </div>
+        <!-- START PLAY PAUSE PARALLAX -->
         <div class="container-PP">
             <label>
                 <svg id="parallax-pause" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
@@ -74,8 +79,19 @@
             </label>
             <input type="checkbox" class="play-pause">
         </div>
+        <!-- END PLAY PAUSE PARALLAX -->
     </div>
-    
+    <!-- END DO PARALLAX -->
+
+    <!-- START EFFECTS -->
+    <div id="effects">
+        <div class="effect-1"></div>
+        <div class="effect-2"></div>
+        <div class="curve"></div>
+    </div>
+    <!-- END EFFECTS -->
+
+
     <main>
     </main>
     <footer>
