--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Anderson</title>
 
 </head>
-<body style="overflow-x: hidden;">
+<body ">
     <!-- START MENU -->
     <header>
         <nav class="nav">
@@ -40,7 +40,7 @@
                     </a>
                 </li>
                 <li class="nav-li">
-                    <a href="#" class="nav-link">
+                    <a id="buttonContact" href="#contact" class="nav-link">
                         <span class="nav-text">Contact</span>
                         <i class="nav-icon fa-sharp fa-solid fa-address-card"></i>
                     </a>
@@ -91,12 +91,37 @@
     </div>
     <!-- END EFFECTS -->
 
-
     <main>
     </main>
-    <footer>
-        Ola
+
+    <footer id="contact">
+        <ul class="social-media">
+            <li class="social-media__effect">
+                <a href="https://www.linkedin.com/in/anderson-borba-8861b91a2/" target="_blank">
+                    <i class="social-media__link fab fa-github fa-3x"></i>
+                </a>
+                <!-- START EFFECT  -->   
+                <div class="social-media__effect__up"><i class="social-media__link fa-solid fa-gamepad fa-3x"></i></div>
+                <div class="social-media__effect__down"><i class="social-media__link fa-solid fa-gamepad fa-3x"></i></div>
+                <!-- END EFFECT  -->
+            </li>
+            <li class="social-media__effect">
+                <a href="https://github.com/MarshFfeco?tab=repositories" target="_blank">
+                    <i class="social-media__link fab fa-linkedin fa-3x"></i>
+                </a>
+                <!-- START EFFECT  -->
+                <div class="social-media__effect__up"><i class="social-media__link fa-solid fa-gamepad fa-3x"></i></div>
+                <div class="social-media__effect__down"><i class="social-media__link fa-solid fa-gamepad fa-3x"></i></div>
+                <!-- END EFFECT  -->
+            </li>
+        </ul>
+
+
+        <div class="copyright">
+            <p>Copyright © 2022 MarshFfeco(Anderson)</p>
+        </div>    
     </footer>
+
     <script src="./assets/js/config.js"></script>
     <script src="./assets/js/module/parallax.js"></script>
 </body>
