--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <title>Anderson</title>
 
 </head>
-<body style="overflow-x: hidden;">
+<body>
+    <!-- START MENU -->
     <header>
         <nav class="nav">
             <ul class="nav-ul">
@@ -33,13 +34,13 @@
                     </a>
                 </li>
                 <li class="nav-li">
-                    <a href="#" class="nav-link">
+                    <a href="#portfolio" class="nav-link">
                         <span class="nav-text">Portfolio</span>
                         <i class="nav-icon fa-sharp fa-solid fa-terminal"></i>
                     </a>
                 </li>
                 <li class="nav-li">
-                    <a href="#" class="nav-link">
+                    <a id="buttonContact" href="#contact" class="nav-link">
                         <span class="nav-text">Contact</span>
                         <i class="nav-icon fa-sharp fa-solid fa-address-card"></i>
                     </a>
@@ -53,15 +54,106 @@
             </ul>
         </nav>
     </header>
-    <div id="parallax">
-        <div class="parallax-item-1"></div>
-        <div class="parallax-item-2"></div>
-        <div class="parallax-item-3"></div>
-        <div class="parallax-item-4"></div>
+    <!-- END DO MENU -->
+
+    <!-- START PARALLAX -->
+    <div class="parallax-container">
+        <div id="parallax">
+            <div class="items parallax-item-1"></div>
+            <div class="items parallax-item-2"></div>
+            <div class="items parallax-item-3"></div>
+            <div class="items parallax-item-4"></div>
+            <div class="items parallax-item-5"></div>
+            <div class="items parallax-item-6"></div>
+            <div class="items parallax-item-7"></div>
+        </div>
+        <!-- START PLAY PAUSE PARALLAX -->
+        <div class="container-PP">
+            <label>
+                <svg id="parallax-pause" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                    <path d="M48 64C21.5 64 0 85.5 0 112V400c0 26.5 21.5 48 48 48H80c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H48zm192 0c-26.5 0-48 21.5-48 48V400c0 26.5 21.5 48 48 48h32c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H240z"/>
+                </svg>
+                <svg id="parallax-play" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                    <path d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"/>
+                </svg>
+            </label>
+            <input type="checkbox" class="play-pause">
+        </div>
+        <!-- END PLAY PAUSE PARALLAX -->
     </div>
-    <main>
+    <!-- END DO PARALLAX -->
+
+    <main class="#about">
     </main>
-    <footer>
+
+    <!-- START PORTPOLIO -->
+    <div id="portfolio">
+        <h1>Projetos</h1>
+
+        <div class="portfolio__container">
+            <article class="portfolio__card">
+                <figure class="figure-1"></figure>
+
+                <h2>Livraria_pdp</h2>
+
+                <a href="https://github.com/MarshFfeco/Livraria_pdp" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
+
+            </article>
+            <article class="portfolio__card">
+                <figure class="figure-2"></figure>
+
+                <h2>Tela Login SignUp</h2>
+
+                <a href="https://github.com/MarshFfeco/LoginSignUp" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
+            </article>
+            <article class="portfolio__card">
+                <figure class="figure-3"></figure>
+
+                <h2>CalculatorFactory</h2>
+
+                <a href="https://github.com/MarshFfeco/CalculatorFactory"><i class="fa-brands fa-github fa-2x" target="_blank"></i></a>
+            </article>
+            <article class="portfolio__card">
+                <figure class="figure-4"></figure>
+
+                <h2>CalculatorConstruct</h2>
+
+                <a href="https://github.com/MarshFfeco/CalculatorConstruct"><i class="fa-brands fa-github fa-2x" target="_blank"></i></a>
+            </article>
+           
+        </div>
+    </div>
+    <!-- END PORTPOLIO -->
+
+    <footer id="contact">
+        <ul class="social-media">
+            <li class="social-media__effect">
+                <a href="https://www.linkedin.com/in/anderson-borba-8861b91a2/" target="_blank">
+                    <i class="social-media__link fab fa-github fa-3x"></i>
+                </a>
+                <!-- START EFFECT  -->   
+                <div class="social-media__effect__up"><i class="social-media__link fa-solid fa-gamepad fa-3x"></i></div>
+                <div class="social-media__effect__down"><i class="social-media__link fa-solid fa-gamepad fa-3x"></i></div>
+                <!-- END EFFECT  -->
+            </li>
+            <li class="social-media__effect">
+                <a href="https://github.com/MarshFfeco?tab=repositories" target="_blank">
+                    <i class="social-media__link fab fa-linkedin fa-3x"></i>
+                </a>
+                <!-- START EFFECT  -->
+                <div class="social-media__effect__up"><i class="social-media__link fa-solid fa-gamepad fa-3x"></i></div>
+                <div class="social-media__effect__down"><i class="social-media__link fa-solid fa-gamepad fa-3x"></i></div>
+                <!-- END EFFECT  -->
+            </li>
+        </ul>
+
+
+        <div class="copyright">
+            <p>Copyright © 2022 MarshFfeco(Anderson)</p>
+        </div>    
     </footer>
+
+    <script src="./assets/js/config.js"></script>
+    <script src="./assets/js/module/parallax.js"></script>
 </body>
 </html>
