update design portfolio

--- a/index.html
+++ b/index.html
@@ -113,39 +113,74 @@
     <!-- START PORTPOLIO -->
     <div id="portfolio">
         <div class="portfolio__text">
-            <h2 class="portfolio__tittle">Projetos</h2>
+            <h2 class="portfolio__tittle">PROJETOS</h2>
         </div>
 
         <div class="portfolio__container">
             <article class="portfolio__card">
-                <figure class="figure-1"></figure>
+                <figure class="portfolio__card__figure">
+                    <img src="./assets/image/GH/LS.png" alt="">
+                </figure>
 
-                <h2 class="portfolio__card__tittle">Livraria_pdp</h2>
+                <div class="portfolio__card__overlay">
+                    <header class="portfolio__card__overlay__header">
+                        <h2>Livraria_pdp</h2>
+                    </header>
 
-                <a href="https://github.com/MarshFfeco/Livraria_pdp" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
-
+                    <div class="portfolio__card__overlay__link">
+                        <a href="https://github.com/MarshFfeco/Livraria_pdp" target="_blank"><i class="fa-brands fa-github fa-3x"></i>GITHUB</a>
+                        <a href="http://34.151.224.118" target="_blank" class="portfolio__card__link" style="font-size: 2em;">Acess</a>
+                    </div>
+                </div>
             </article>
+         
             <article class="portfolio__card">
-                <figure class="figure-2"></figure>
+                <figure class="portfolio__card__figure">
+                    <img src="./assets/image/GH/LOSU.png" alt="">
+                </figure>
 
-                <h2 class="portfolio__card__tittle">Tela Login SignUp</h2>
+                <div class="portfolio__card__overlay">
+                    <header class="portfolio__card__overlay__header">
+                        <h2>Tela Login SignUp</h2>
+                    </header>
 
-                <a href="https://github.com/MarshFfeco/LoginSignUp" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
+                    <div class="portfolio__card__overlay__link">
+                        <a href="https://github.com/MarshFfeco/LoginSignUp" target="_blank"><i class="fa-brands fa-github fa-3x"></i>GITHUB</a>
+                    </div>
+                </div>
             </article>
+
             <article class="portfolio__card">
-                <figure class="figure-3"></figure>
+                <figure class="portfolio__card__figure">
+                    <img src="./assets/image/GH/CF.png" alt="">
+                </figure>
 
-                <h2 class="portfolio__card__tittle">CalculatorFactory</h2>
+                <div class="portfolio__card__overlay">
+                    <header class="portfolio__card__overlay__header">
+                        <h2>CalculatorFactory</h2>
+                    </header>
 
-                <a href="https://github.com/MarshFfeco/CalculatorFactory"><i class="fa-brands fa-github fa-2x" target="_blank"></i></a>
+                    <div class="portfolio__card__overlay__link">
+                        <a href="https://github.com/MarshFfeco/CalculatorFactory"><i class="fa-brands fa-github fa-3x" target="_blank"></i> GITHUB</a>
+                    </div>
+                </div>
             </article>
+
             <article class="portfolio__card">
-                <figure class="figure-4"></figure>
+                <figure class="portfolio__card__figure">
+                    <img src="./assets/image/GH/CC.png" alt="">
+                </figure>
 
-                <h2 class="portfolio__card__tittle">CalculatorConstruct</h2>
-                <a href="https://github.com/MarshFfeco/CalculatorConstruct"><i class="fa-brands fa-github fa-2x" target="_blank"></i></a>
-            </article>
-           
+                <div class="portfolio__card__overlay">
+                    <header class="portfolio__card__overlay__header">
+                        <h2>CalculatorConstruct</h2>
+                    </header>
+
+                    <div class="portfolio__card__overlay__link">
+                        <a href="https://github.com/MarshFfeco/CalculatorConstruct"><i class="fa-brands fa-github fa-3x" target="_blank"></i>GITHUB</a>
+                    </div>
+                </div>
+            </article>       
         </div>
     </div>
     <!-- END PORTPOLIO -->
